TORY-368 feat: Coupang 파트너스 제품 검색 결과에 Redis 캐싱 기능 추가
- AffiliateService에 @Cacheable 적용하여 검색 결과 캐싱
- RedisConfig에서 캐시 설정 및 JSON serializer 구성
- CoupangProducts 래퍼 클래스 추가
- CoupangClient에서 CoupangProducts 반환하도록 변경
- AffiliateCacheTest 통합 테스트 추가 (저장/조회/삭제/TTL)
- 캐시 키 생성 전략을 기본 방식(#keyword)으로 단순화